--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -5,7 +5,12 @@
         <div class="card card-default">
             <div class="card-header">
                 <h3 class="card-title">
-                    <i class="fas fa-plus"></i>
+                    {% if action == 'add' %}
+                        <i class="fas fa-plus"></i>
+                    {% else %}
+                        <i class="fas fa-edit"></i>
+                    {% endif %}
+
                     {{ title }}
                 </h3>
             </div>
