[ UPDATE ] Cargar datos en mi tabla con ajax y datatable
Cargar datos en mi tabla con ajax y datatable
https://docs.djangoproject.com/en/4.0/ref/request-response/

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -8,6 +8,11 @@
     <script src="{% static 'lib/datatables-1.10.20/js/dataTables.bootstrap4.min.js' %}"></script>
     <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/dataTables.responsive.min.js' %}"></script>
     <script src="{% static 'lib/datatables-1.10.20/plugins/responsive-2.2.3/js/responsive.bootstrap4.min.js' %}"></script>
+
+    {% block head_list %}
+
+    {% endblock %}
+
 {% endblock %}
 
 {% block content %}
