--- a/app/templates/vtc/sidebar.html
+++ b/app/templates/vtc/sidebar.html
@@ -13,7 +13,7 @@
                 <img src="{% static 'img/user.png' %}" class="img-circle elevation-2" alt="User Image">
             </div>
             <div class="info">
-                <a href="#" class="d-block">Alexander Pierce</a>
+                <a href="#" class="d-block">{{request.user.username}}</a>
             </div>
         </div>
         <nav class="mt-2">
