[UPDATE] Media Files  Parte I
Media Files  Parte I

https://html.com/attributes/form-enctype/
https://www.aprenderaprogramar.com/index.php?option=com_content&view=article&id=541:enctype-multipartform-data-html-seleccionar-archivo-type-file-en-formularios-ejemplo-basico-cu00725b&catid=69&Itemid=192
https://www.it-swarm.dev/es/javascript/como-enviar-objetos-formdata-con-peticiones-ajax-en-jquery/940695632/
https://developer.mozilla.org/es/docs/Web/Guide/Usando_Objetos_FormData
https://www.returngis.net/2014/01/html-5-formdata/
https://html.com/attributes/form-enctype/

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load widget_tweaks %}
 {% block content %}
-    <form method="post" action=".">
+    <form method="post" action="." enctype="multipart/form-data">
         <div class="card card-primary">
             <div class="card-header">
                 <h3 class="card-title">
@@ -65,12 +65,12 @@
             });
         {% endif %}
 
-        $('form').on('submit', function (e) {
+        {% comment %} $('form').on('submit', function (e) {
             e.preventDefault();
             var parameters = $(this).serializeArray();
             submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {
                 location.href = '{{ list_url }}';
             });
-        });
+        }); {% endcomment %}
     </script>
 {% endblock %}
