[UPDATE] Media Files con ajax
Media Files con ajax

--- a/app/core/erp/templates/product/list.html
+++ b/app/core/erp/templates/product/list.html
@@ -16,12 +16,12 @@
         <tr>
             <td>{{ obj.id }}</td>
             <td>{{ obj.name }}</td>
-            <td>{{ obj.cate.name }}</td>
+            <td>{{ obj.cat.name }}</td>
             <td class="text-center">
 {#                 {{ obj.image }}#}
                 <img src="{{ obj.get_image }}" class="img-fluid d-block mx-auto" style="width: 20px; height: 20px;">
             </td>
-            <td>{{ obj.pvp }}</td>
+            <td class="text-center"><span class="badge badge-pill badge-secondary">${{ obj.pvp }}</span></td>
             <td class="text-center">
                 <a href="{% url 'erp:product_update' obj.id %}" class="btn btn-warning btn-xs btn-flat">
                     <i class="fas fa-edit"></i>
