--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.css' %}">
     <script src="{% static 'lib/jquery-confirm-v3.3.4/jquery-confirm.min.js' %}"></script>
     <!-- Functions -->
-    <script src="{% static 'javascripts/functions.js' %}"></script>
+    <script src="{% static 'js/functions.js' %}"></script>
     <!-- Block head -->
     {% block head %}
 
