--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -65,12 +65,13 @@
             });
         {% endif %}
 
-        {% comment %} $('form').on('submit', function (e) {
+        $('form').on('submit', function (e) {
             e.preventDefault();
-            var parameters = $(this).serializeArray();
+            //var parameters = $(this).serializeArray();
+            var parameters = new FormData(this);
             submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de realizar la siguiente acción?', parameters, function () {
                 location.href = '{{ list_url }}';
             });
-        }); {% endcomment %}
+        });
     </script>
 {% endblock %}
