Gráficos en Django Parte II

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -14,9 +14,16 @@
                 <div id="container"></div>
             </div>
         </div>
+        <br>
+        <div class="row">
+            <div class="col-lg-12">
+                <div id="container-pie"></div>
+            </div>
+        </div>
+        <br>
     </div>
     <script type="application/javascript">
-        Highcharts.chart('container', {
+        var graphcolumn = Highcharts.chart('container', {
             chart: {
                 type: 'column'
             },
@@ -63,13 +70,86 @@
                     borderWidth: 0
                 }
             },
-            series: [{
-                name: 'Porcentaje de venta',
-                showInLegend: false,
-                colorByPoint: true,
-                data: {{ graph_sales_year_month|safe }}
+        });
 
-            }]
+        var graphpie = Highcharts.chart('container-pie', {
+            chart: {
+                plotBackgroundColor: null,
+                plotBorderWidth: null,
+                plotShadow: false,
+                type: 'pie'
+            },
+            title: {
+                text: 'Porcentaje de venta de productos por el mes de Junio del año 2020'
+            },
+            tooltip: {
+                pointFormat: '{series.name}: <b>{point.percentage:.1f}%</b>'
+            },
+            accessibility: {
+                point: {
+                    valueSuffix: '%'
+                }
+            },
+            plotOptions: {
+                pie: {
+                    allowPointSelect: true,
+                    cursor: 'pointer',
+                    dataLabels: {
+                        enabled: true,
+                        format: '<b>{point.name}</b>: {point.percentage:.1f} %'
+                    }
+                }
+            },
+        });
+
+        function get_graph_sales_year_month() {
+            $.ajax({
+                url: window.location.pathname, //window.location.pathname
+                type: 'POST',
+                data: {
+                    'action': 'get_graph_sales_year_month'
+                },
+                dataType: 'json',
+            }).done(function (data) {
+                if (!data.hasOwnProperty('error')) {
+                    graphcolumn.addSeries(data);
+                    return false;
+                }
+                message_error(data.error);
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                alert(textStatus + ': ' + errorThrown);
+            }).always(function (data) {
+
+            });
+        }
+
+        function get_graph_sales_products_year_month() {
+            $.ajax({
+                url: window.location.pathname, //window.location.pathname
+                type: 'POST',
+                data: {
+                    'action': 'get_graph_sales_products_year_month'
+                },
+                dataType: 'json',
+            }).done(function (data) {
+                if (!data.hasOwnProperty('error')) {
+                    graphpie.addSeries(data);
+                    return false;
+                }
+                message_error(data.error);
+            }).fail(function (jqXHR, textStatus, errorThrown) {
+                alert(textStatus + ': ' + errorThrown);
+            }).always(function (data) {
+
+            });
+        }
+
+        $(function () {
+
+            get_graph_sales_year_month();
+
+            get_graph_sales_products_year_month();
+
         });
     </script>
 {% endblock %}
