Gráficos en Django  Parte III

--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -21,6 +21,12 @@
             </div>
         </div>
         <br>
+        <div class="row">
+            <div class="col-lg-12">
+                <div id="container-online"></div>
+            </div>
+        </div>
+        <br>
     </div>
     <script type="application/javascript">
         var graphcolumn = Highcharts.chart('container', {
@@ -100,6 +106,108 @@
                     }
                 }
             },
+        });
+
+        Highcharts.chart('container-online', {
+            chart: {
+                type: 'spline',
+                animation: Highcharts.svg, // don't animate in old IE
+                marginRight: 10,
+                events: {
+                    load: function () {
+                        var series = this.series[0];
+                        setInterval(function () {
+                            $.ajax({
+                                url: window.location.pathname, //window.location.pathname
+                                type: 'POST',
+                                data: {
+                                    'action': 'get_graph_online'
+                                },
+                                dataType: 'json',
+                            }).done(function (data) {
+                                if (!data.hasOwnProperty('error')) {
+                                    var x = (new Date()).getTime();
+                                    series.addPoint([x, data.y], true, true);
+                                    return false;
+                                }
+                                message_error(data.error);
+                            }).fail(function (jqXHR, textStatus, errorThrown) {
+                                alert(textStatus + ': ' + errorThrown);
+                            }).always(function (data) {
+
+                            });
+                        }, 1000);
+                    }
+                }
+            },
+
+            time: {
+                useUTC: false
+            },
+
+            title: {
+                text: 'Live random data'
+            },
+
+            accessibility: {
+                announceNewData: {
+                    enabled: true,
+                    minAnnounceInterval: 15000,
+                    announcementFormatter: function (allSeries, newSeries, newPoint) {
+                        if (newPoint) {
+                            return 'New point added. Value: ' + newPoint.y;
+                        }
+                        return false;
+                    }
+                }
+            },
+
+            xAxis: {
+                type: 'datetime',
+                tickPixelInterval: 150
+            },
+
+            yAxis: {
+                title: {
+                    text: 'Value'
+                },
+                plotLines: [{
+                    value: 0,
+                    width: 1,
+                    color: '#808080'
+                }]
+            },
+
+            tooltip: {
+                headerFormat: '<b>{series.name}</b><br/>',
+                pointFormat: '{point.x:%Y-%m-%d %H:%M:%S}<br/>{point.y:.2f}'
+            },
+
+            legend: {
+                enabled: false
+            },
+
+            exporting: {
+                enabled: false
+            },
+
+            series: [{
+                name: 'Random data',
+                data: (function () {
+                    // generate an array of random data
+                    var data = [],
+                        time = (new Date()).getTime(),
+                        i;
+
+                    for (i = -19; i <= 0; i += 1) {
+                        data.push({
+                            x: time + i * 1000,
+                            y: Math.random()
+                        });
+                    }
+                    return data;
+                }())
+            }]
         });
 
         function get_graph_sales_year_month() {
