--- a/app/core/user/templates/user/list.html
+++ b/app/core/user/templates/user/list.html
@@ -6,13 +6,13 @@
 
 {% block columns %}
     <tr>
-        <th scope="col" style="width: 5%;">Nro</th>
-        <th scope="col" style="width: 15%;">Nombres</th>
-        <th scope="col" style="width: 15%;">Username</th>
-        <th scope="col" style="width: 20%;">Fecha de registro</th>
-        <th scope="col" style="width: 10%;">Imagen</th>
-        <th scope="col" style="width: 15%;">Grupos</th>
-        <th scope="col" style="width: 15%;">Opciones</th>
+        <th scope="col">Nro</th>
+        <th scope="col">Nombres</th>
+        <th scope="col">Username</th>
+        <th scope="col">Fecha de registro</th>
+        <th scope="col">Imagen</th>
+        <th scope="col">Grupos</th>
+        <th scope="col">Opciones</th>
     </tr>
 {% endblock %}
 
