--- a/app/core/login/templates/login/resetpwd.html
+++ b/app/core/login/templates/login/resetpwd.html
@@ -31,22 +31,25 @@
             </div>
         </div>
         <script type="application/javascript">
-            {% if form.errors %}
-                var errors = '';
-                {% for field in form %}
-                    {% for error in field.errors %}
-                        errors += '{{ error }}\n';
-                    {% endfor %}
-                {% endfor %}
-                {% for error in form.non_field_errors %}
-                    errors += '{{ error }}\n';
-                {% endfor %}
-                Swal.fire({
-                    title: 'Error!',
-                    text: errors,
-                    icon: 'error'
+            $(function () {
+                $('form').on('submit', function (e) {
+                    e.preventDefault();
+                    var parameters = new FormData(this);
+                    submit_with_ajax(window.location.pathname, 'Notificación', '¿Estas seguro de resetear tu contraseña?', parameters, function () {
+                        Swal.fire({
+                            title: 'Notificación',
+                            text: 'Se ha enviado un correo electrónico con los pasos a seguir para que pueda resetear su contraseña',
+                            icon: 'success',
+                            timer: 5000,
+                            onClose: () => {
+                                location.href = '/';
+                            }
+                        }).then((result) => {
+
+                        });
+                    });
                 });
-            {% endif %}
+            });
         </script>
     </div>
 {% endblock %}
