Búsqueda de productos con modals en mi factura Parte II

--- a/app/core/erp/templates/sale/create.html
+++ b/app/core/erp/templates/sale/create.html
@@ -44,7 +44,9 @@
                                 <div class="form-group">
                                     <label>Buscador de productos:</label>
                                     <div class="input-group">
-                                        <select class="form-control select2" name="search"></select>
+                                        {#                                        <select class="form-control select2" name="search"></select>#}
+                                        <input type="text" class="form-control" autocomplete="off"
+                                               placeholder="Ingrese una descripción" maxlength="50" name="search">
                                         <div class="input-group-append">
                                             <button class="btn btn-primary dropdown-toggle" type="button"
                                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,6 +55,9 @@
                                             <div class="dropdown-menu">
                                                 <a class="dropdown-item btnSearchProducts">
                                                     <i class="fas fa-search"></i> Buscar productos
+                                                </a>
+                                                <a class="dropdown-item btnClearSearch">
+                                                    <i class="fas fa-times"></i> Limpiar búsqueda
                                                 </a>
                                             </div>
                                         </div>
@@ -69,7 +74,7 @@
                                         <th>Eliminar</th>
                                         <th>Producto</th>
                                         <th>Categoría</th>
-                                        <th>PVP</th>
+                                        <th>Precio Unitario</th>
                                         <th>Cantidad</th>
                                         <th>Subtotal</th>
                                     </tr>
@@ -179,7 +184,19 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    ...
+                    <table class="table table-bordered table-hover" id="tblSearchProducts">
+                        <thead>
+                        <tr>
+                            <th>Producto</th>
+                            <th>Categoría</th>
+                            <th>Imagen</th>
+                            <th>Precio Unitario</th>
+                            <th>Opciones</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        </tbody>
+                    </table>
                 </div>
             </div>
         </div>
