Búsqueda de productos con modals en mi factura Parte III

--- a/app/core/erp/templates/sale/create.html
+++ b/app/core/erp/templates/sale/create.html
@@ -44,9 +44,9 @@
                                 <div class="form-group">
                                     <label>Buscador de productos:</label>
                                     <div class="input-group">
-                                        {#                                        <select class="form-control select2" name="search"></select>#}
-                                        <input type="text" class="form-control" autocomplete="off"
-                                               placeholder="Ingrese una descripción" maxlength="50" name="search">
+                                        <select class="form-control select2" name="search"></select>
+{#                                        <input type="text" class="form-control" autocomplete="off"#}
+{#                                               placeholder="Ingrese una descripción" maxlength="50" name="search">#}
                                         <div class="input-group-append">
                                             <button class="btn btn-primary dropdown-toggle" type="button"
                                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
