[UPDATE] Cambio de Colores

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -7,7 +7,7 @@
 {% endblock %}
 {% block content %}
     <form method="post" action="." enctype="multipart/form-data">
-        <div class="card card-primary">
+        <div class="card card-danger">
             <div class="card-header">
                 <h3 class="card-title">
                     {% if action == 'add' %}
