--- a/app/templates/hzt/header.html
+++ b/app/templates/hzt/header.html
@@ -1,6 +1,6 @@
 {% load static %}
 <!-- Navbar -->
-<nav class="main-header navbar navbar-expand navbar-dark navbar-primary">
+<nav class="main-header navbar navbar-expand navbar-dark navbar-danger">
     <div class="container">
         <a href="{% url 'erp:dashboard' %}" class="navbar-brand">
             <img src="{% static 'img/logo.png' %}" alt="AdminLTE Logo"
