--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -16,7 +16,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="card card-primary">
+    <div class="card card-danger">
         <div class="card-header">
             <h3 class="card-title">
                 <i class="fas fa-search"></i>
