--- a/app/core/reports/templates/sale/report.html
+++ b/app/core/reports/templates/sale/report.html
@@ -17,7 +17,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="card card-primary">
+    <div class="card card-danger">
         <div class="card-header">
             <h3 class="card-title">
                 <i class="fas fa-chart-bar"></i>
