--- a/app/templates/hzt/header.html
+++ b/app/templates/hzt/header.html
@@ -37,11 +37,12 @@
                 </li>
             </ul>
         </div>
+        {{ request.session.group.name }}
         <ul class="order-1 order-md-3 navbar-nav navbar-no-expand ml-auto">
             {% if request.user.groups.all %}
                 <li class="nav-item dropdown">
                     <a id="dropdownSubMenu1" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                       class="nav-link{% if request.user.groups.all.count > 1 %} dropdown-toggle{% endif %}">{{ request.session.group }}</a>
+                       class="nav-link dropdown-toggle ">{{ request.session.group.name }}xxs</a>
                     {% if request.user.groups.all.count > 1 %}
                         <ul aria-labelledby="dropdownSubMenu1" class="dropdown-menu border-0 shadow"
                             style="left: 0px; right: inherit;">
